[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/Lobby.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonHost" type="Button" parent="."]
margin_left = 362.326
margin_top = 82.6326
margin_right = 621.326
margin_bottom = 150.633
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
margin_left = 367.449
margin_top = 265.245
margin_right = 616.449
margin_bottom = 341.245
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 349.49
margin_top = 363.755
margin_right = 635.49
margin_bottom = 383.755
text = "Enter Hosts IPv4 or IPV6 address for joining"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 370.918
margin_top = 397.796
margin_right = 613.918
margin_bottom = 421.796
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
